--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
     type: git
-    repository: https://github.com/lin1993/myBook.git
+    repository: https://github.com/lin1993/lin1993.github.io.git
     branch: master
