优化更新并且补充站点地图

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,15 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+Plugins:
+- hexo-generator-baidu-sitemap
+- hexo-generator-sitemap
+
+baidusitemap:
+    path: baidusitemap.xml
+sitemap:
+    path: sitemap.xml
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
